@@ -5,6 +5,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.6  2004/01/30 14:28:19  jimmyo
+# More timeouts in munin-update (Deb#222674).
+#
 # Revision 1.5  2004/01/29 18:19:58  jimmyo
 # Made Munin compatible with perl 5.005_03 (patch by Lupe Christoph) (SF#884622)
 #
@@ -324,7 +327,7 @@ if ($bad_procs) # Use old configuration for killed children
 		my $oldnode = $children{$key}->[3];
 
 		use_old_config ($domain, $name, $oldnode);
-		logger ("Using old configuration for $domain -> $name.");
+		logger ("Attempting to use old configuration for $domain -> $name.");
 	}
 }
 
@@ -429,7 +432,7 @@ sub process_node {
   my $socket = new IO::Socket::INET ('PeerAddr' => "$node->{address}:".
 		  ($node->{port} || $config->{domain}->{$domain}->{port} || 
 		   $config->{port} || "4949"), 
-		  'Proto'    => "tcp");
+		  'Proto'    => "tcp", "Timeout" => $timeout);
   my $err = ($socket ? "" : $!);
 
   if ($do_fork)
@@ -440,7 +443,7 @@ sub process_node {
       my @tmp = ($$, $domain, $name);
 
       if (!$socket) {
-	logger ("Could not connect to $name($node->{address}): $err - Using old configuration");
+	logger ("Could not connect to $name($node->{address}): $err - Attempting to use old configuration");
 	# If we can't reach the client. Using old Configuration.
 	if (ref $oldnode) {
 	  $config->{domain}->{$domain}->{node}->{$name} = $oldnode;
@@ -486,7 +489,7 @@ sub process_node {
   else # No forking...
   {
       if (!$socket) {
-	logger ("Could not connect to $name($node->{address}): $err\nUsing old configuration");
+	logger ("Could not connect to $name($node->{address}): $err\nAttempting to use old configuration");
 	# If we can't reach the client. Using old Configuration.
 	if (ref $oldnode) {
 	  $config->{domain}->{$domain}->{node}->{$name} = $oldnode;
@@ -578,7 +581,7 @@ sub config_node {
   };
   if ($@) {
     die unless ($@ =~ m/Could not run list/);
-      logger ("Could not get list from $node->{address}: $!\nUsing old configuration");
+      logger ("Could not get list from $node->{address}: $!\nAttempting to use old configuration");
     if (ref $oldnode) {
       $config->{domain}->{$domain}->{node}->{$name} = $oldnode;
     }
@@ -609,7 +612,7 @@ sub config_node {
       if (/\# timeout/) {
 	logger("Client reported timeout in configuration of $servname");
 	if ($oldnode->{client}->{$servname}) {
-	  logger("Using old configuration");
+	  logger("Attempting to use old configuration");
 	  $config->{domain}->{$domain}->{node}->{$name}->{client}->{$servname} = $oldnode->{client}->{$servname};
 	} else {
 	  logger("Skipping configuration of $servname");
@@ -735,7 +738,7 @@ sub use_old_config
     my $oldnode = shift;
 
     $config->{domain}->{$domain}->{node}->{$name} = $oldnode;
-    logger ("Using old configuration for $domain -> $name.");
+    logger ("Attempting to use old configuration for $domain -> $name.");
 }
 
 
